desafio landing page

--- a/landing/index.html
+++ b/landing/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
+    <title>Minha Página de Perfil</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Michele Silva, Full Stack Developer</h1>
+    </header>
+    <section class="conteudo">
+        <div class="perfil">
+            <img src="foto-de-perfil.jpg" alt="Minha Foto">
+            <h2>Michele Silva</h2>
+        </div>
+        <div class="descricao">
+            <p>Sou uma desenvolvedora web apaixonada por HTML e CSS. Trabalho na indústria de desenvolvimento web há mais de 5 anos, com foco em desenvolvimento front-end.</p>
+            <p>Minhas habilidades incluem:</p>
+            <ul class="tecnologias">
+                <li>
+                    <span>HTML5</span> 🌐
+                </li>
+                <li>
+                    <span>CSS3</span> 🎨
+                </li>
+                <li>
+                    <span>JavaScript</span> 🚀
+                </li>
+                <li>
+                    <span>Design Responsivo</span> 📱
+                </li>
+                <li>
+                    <span>Design de Interface (UI/UX)</span> 💡
+                </li>
+            </ul>
+            <p>No meu tempo livre, gosto de experimentar com as tecnologias e frameworks web mais recentes e estou constantemente aprendendo para me manter atualizada com o cenário web em constante evolução.</p>
+            <p>Conecte-se comigo nas redes sociais:</p>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/joaosilva">LinkedIn</a></li>
+                <li><a href="https://www.github.com/joaosilva">GitHub</a></li>
+                <li><a href="https://www.twitter.com/joaosilva">Twitter</a></li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
