--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Desafios de Frontend</h1>
+    <h2>Nestes desafios quero que tente recriar cada uma das páginas que vai ver abaixo</h2>
     <ul>
         <li><a href="landing/index.html">landing page</a></li>
     </ul>
