desafio de site de empresa

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <h1>Desafios de Frontend</h1>
     <h2>Nestes desafios quero que tente recriar cada uma das páginas que vai ver abaixo</h2>
     <ul>
-        <li><a href="landing/index.html">landing page</a></li>
+        <li><a href="landing/index.html">Página pessoal</a></li>
+        <li><a href="company/index.html">Página de empresa</a></li>
     </ul>
 </body>
 </html>
